Atividade 3: Integração Docker Compose

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,2 +1,2 @@
-DATABASE_URL="postgresql://user:password@localhost:5432/database_name?schema=public"
+DATABASE_URL="postgresql://task_user:postgres@postgres:5432/task_db?schema=public"
 PORT=3000
