--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,7 +42,7 @@ services:
     ports:
       - "5173:5173"
     environment:
-      VITE_API_URL: VITE_API_URL=/api
+      VITE_API_URL: /api
     depends_on:
       - backend
     volumes:
