feat: adicionar nova opção de rota url com parametros do id da task

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,2 +1,2 @@
-DATABASE_URL="postgresql://task_user:postgres@postgres:5432/task_db?schema=public"
+DATABASE_URL="postgresql://task_user:SUA-SENHA-AQUI@postgres:5432/task_db?schema=public"
 PORT=3000
